--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -125,6 +126,10 @@
         backdrop-filter: blur(12px);
         -webkit-backdrop-filter: blur(12px);
         box-shadow: 0 10px 40px -10px rgba(0,0,0,0.1);
+      }
+      /* Smooth marker movement */
+      .leaflet-marker-icon.smooth-marker {
+        transition: transform 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
       }
     </style>
   <script type="importmap">
